--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 </head>
 <body>
   <div id="landing">
-    <h1>Video Calling</h1>
+    <h1>InspiriQ Calling</h1>
     <button id="hostBtn">Host</button>
     <div id="joinContainer">
       <input type="text" id="joinCode" placeholder="Enter Code" maxlength="4" />
